Fix vertical gaps within definition lists using ul and p

--- a/_sass/others.scss
+++ b/_sass/others.scss
@@ -596,10 +596,21 @@ section.column_main {
         dd {
             margin: 0 0 0 24px;
             padding: 0 0 0.5em 0;
+            
+            // Usually blocks have bottom margins but since the first dd line
+            // is not interpreted as a paragraph, we add vertical spacing to the
+            // 'next' block to achieve the effect.
+            p {
+                margin-top: 12px;
+            }
+            
+            ul {
+                margin-top: 2px;
+                margin-bottom: 2px;
+            }
         }
     }
     
-    // Specialization for definition lists
     div.syntax {
         margin: 0 0 12px 0;
         padding: 10px 12px 4px 12px;
